--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
  @font-face {
     font-family: "Proxima Nova";
-    src: url("./assets/fonts/proximanova_black.otf") format("woff")
+    src: url("./assets/fonts/proximanova_regular.ttf") format("woff")
 }
 
 *,  
