--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -50,7 +50,7 @@
     font-size: 18px;
     line-height: 22px;
     color: #000;
-    border-bottom: #fff solid 3px
+    border-bottom: #fff solid 3px;
 }
 
 .nav__link:hover {
