--- a/src/components/CatalogHero/cataloghero.css
+++ b/src/components/CatalogHero/cataloghero.css
@@ -4,7 +4,8 @@
     background-size: cover;
     background-position: center;
     width: 100%;
-    margin-bottom: 80px
+    margin-bottom: 80px;
+    margin-top: -50px;
 }
 
 .discription-wrapper-p2 {
