--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -38,7 +38,8 @@
 .nav__hamburger {
     display: none;
     border: none;
-    background-color: rgba(0, 0, 0, 0)
+    background-color: rgba(0, 0, 0, 0);
+    margin-top: 20px;
 }
 
 .nav__link {
