--- a/src/components/ServisHero/servishero.css
+++ b/src/components/ServisHero/servishero.css
@@ -55,3 +55,38 @@
 .xizmatlar-box-top hr {
     margin-bottom: 50px
 }
+
+@media only screen and (max-width: 769px) {
+    .intro-box__title {
+        font-size: 65px;
+        line-height: 79px
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .xizmatlar-pg__intro-box {
+        padding: 150px 15px 100px 30px
+    }
+
+    .intro-box__title {
+        font-size: 52px;
+        line-height: 58px
+    }
+
+    .xizmatlar-box-top {
+        padding-left: 30px
+    }
+
+    .xizmatlar-box-top h4 {
+        font-size: 42px
+    }
+
+    .xizmatlar-box-top p {
+        font-size: 16px
+    }
+
+    .catalog-wrapper {
+        margin-bottom: 80px;
+        padding-left: 30px
+    }
+}
