--- a/src/components/AboutAdvertising/aboutadvertising.css
+++ b/src/components/AboutAdvertising/aboutadvertising.css
@@ -16,7 +16,7 @@
     font-weight: 600;
     font-size: 28px;
     line-height: 34px;
-    text-align: center;
+    /* text-align: center; */
     color: #fff
 }
 
@@ -28,7 +28,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
-    text-align: center;
+    /* text-align: center; */
     color: #fff
 }
 
