--- a/src/components/CatalogMain/catalogmain.css
+++ b/src/components/CatalogMain/catalogmain.css
@@ -131,7 +131,7 @@
     }
 
     .main-catolog {
-        width: 400px !important;
+        width: 500px !important;
         overflow-x: scroll !important;
     }
     
@@ -155,6 +155,19 @@
     .catolg-main-p {
         font-size: 20px;
     }
+
+        @media only screen and (max-width: 498px) {
+                .main-catolog {
+                    width: 400px !important;
+                    overflow-x: scroll !important;
+                 }
+        }
+        @media only screen and (max-width: 400px) {
+                .main-catolog {
+                    width: 370px !important;
+                    overflow-x: scroll !important;
+                 }
+        }
 
 }
 
