--- a/src/components/Info/info.css
+++ b/src/components/Info/info.css
@@ -83,13 +83,13 @@
         margin: 0;
         justify-content: center;
         padding: 20px;
-        text-align: center
+        /* text-align: center */
     }
 
     .section-info__dicription {
         margin: 0;
         padding: 20px;
-        text-align: center
+        /* text-align: center */
     }
 }
 
