--- a/src/components/CatalogMain/catalogmain.css
+++ b/src/components/CatalogMain/catalogmain.css
@@ -152,6 +152,10 @@
         margin-top: 15px;
     }
 
+    .p-24{
+        margin-left: 40px;
+    }
+
     .catolg-main-p {
         font-size: 20px;
     }
