--- a/src/components/AboutHero/abouthero.css
+++ b/src/components/AboutHero/abouthero.css
@@ -13,7 +13,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 62px;
-    line-height: 76px;
+    /* line-height: 76px; */
     text-transform: uppercase;
     color: #fff
 }
@@ -34,7 +34,12 @@
     }
 
     .o-nas__intro__title {
-        font-size: 45px;
-        line-height: 55px
+        font-size: 40px;
+        margin-left: -50px;
+    }
+
+    .o-nas__intro__text-wrapper p{
+        font-size: 20px;
+        margin-left: -50px;
     }
 }
