--- a/src/components/CatalogMain/catalogmain.css
+++ b/src/components/CatalogMain/catalogmain.css
@@ -125,6 +125,10 @@
         padding-top: 0px;
     }
 
+    .catolg-main_text{
+        max-width: 360px;
+    }
+
     .list {
         display: flex;
         margin-left: 60px;
