--- a/src/components/ServisHero/servishero.css
+++ b/src/components/ServisHero/servishero.css
@@ -15,7 +15,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 72px;
-    line-height: 88px;
+    /* line-height: 88px; */
     color: #fff
 }
 
@@ -58,8 +58,8 @@
 
 @media only screen and (max-width: 769px) {
     .intro-box__title {
-        font-size: 65px;
-        line-height: 79px
+    font-size: 45px;
+        /* line-height: 79px */
     }
 }
 
@@ -69,8 +69,7 @@
     }
 
     .intro-box__title {
-        font-size: 52px;
-        line-height: 58px
+        font-size: 45px;
     }
 
     .xizmatlar-box-top {
