--- a/src/components/CatalogInfo/cataloginfo.css
+++ b/src/components/CatalogInfo/cataloginfo.css
@@ -30,9 +30,10 @@
     height: 5px;
     background: #c4c4c4;
     margin-left: 0px;
-    margin-top: -30px;
+    margin-top: -45px;
     border-radius: 17px;
-    border: none
+    border: none;
+    margin-bottom: 20px !important;
 }
 
 .info-product__text-wrapper p {
@@ -82,11 +83,13 @@
 
     .info-product__text-wrapper h4 {
         font-size: 38px;
-        line-height: 48px
+        line-height: 48px;
+        margin-top: 96px;
     }
 
     .info-product__text-wrapper p {
         font-size: 18px;
-        line-height: 22px
+        line-height: 22px;
+        max-width: 335px;
     }
 }
