--- a/src/components/CatalogMain/catalogmain.css
+++ b/src/components/CatalogMain/catalogmain.css
@@ -164,6 +164,16 @@
         font-size: 20px;
     }
 
+    .catolg-main_title{
+        font-size: 32px;
+    }
+
+
+    .catolg-main_text{
+        font-size: 16px;
+        max-width: 325px;
+    }
+
         @media only screen and (max-width: 498px) {
                 .main-catolog {
                     width: 400px !important;
