--- a/src/components/Info/info.css
+++ b/src/components/Info/info.css
@@ -58,6 +58,7 @@
     line-height: 28px;
     color: #fff;
 }
+
 .section-info__title1 {
     padding-left: 40px;
     font-family: "Proxima Nova";
@@ -66,8 +67,8 @@
     font-size: 32px;
     line-height: 28px;
     color: #fff;
-    margin-left: -130px;
 }
+
 .section-info__title2 {
     padding-left: 40px;
     font-family: "Proxima Nova";
@@ -76,7 +77,6 @@
     font-size: 32px;
     line-height: 28px;
     color: #fff;
-    margin-left: -240px;
 }
 
 
@@ -126,7 +126,19 @@
 
     .section-info__title {
         margin: 0;
-        justify-content: center;
+        /* justify-content: center; */
+        padding: 20px;
+    }
+
+    .section-info__title1 {
+        margin-left: -90px;
+        /* justify-content: center; */
+        padding: 20px;
+    }
+
+    .section-info__title2 {
+        margin-left: -190px;
+        /* justify-content: center; */
         padding: 20px;
     }
 
@@ -134,18 +146,40 @@
         margin: 0;
         padding: 20px;
         /* text-align: center */
+        font-size: 20px;
+        margin-bottom: 38px;
+    }
+
+    .section-info__dicription1 {
+        margin: 0;
+        font-size: 20px;
+        margin-top: -50px;
+        margin-bottom: 102px;
+        max-width: 317px;
+        margin-left: -20px;
+        line-height: 28px;
+    }
+
+    .section-info__dicription2 {
+        margin: 0;
+        font-size: 20px;
+        margin-top: -50px;
+        margin-bottom: 102px;
+        max-width: 317px;
+        margin-left: -20px;
+        line-height: 28px;
     }
 }
 
 @media only screen and (max-width: 550px) {
     .section-info__title {
-        font-size: 32px;
+        font-size: 26px;
         line-height: 39px
     }
 
     .section-info__dicription {
-        font-size: 28px;
-        line-height: 28px
+        font-size: 20px;
+        line-height: 28px;
     }
 }
 
@@ -159,7 +193,7 @@
     }
 
     .section-info__dicription {
-        font-size: 26px;
+        font-size: 20px;
         line-height: 32px
     }
 }
