--- a/src/components/Servis/servis.css
+++ b/src/components/Servis/servis.css
@@ -96,12 +96,13 @@
     }
 
     .xizmatlar__title {
-        font-size: 38px;
+        font-size: 32px;
         line-height: 38px
     }
 
     .xizmatlar__info {
-        font-size: 18px;
-        line-height: 26px
+        font-size: 16px;
+        line-height: 26px;
+        max-width: 316px;
     }
 }
