--- a/src/components/ServisMain/servismain.css
+++ b/src/components/ServisMain/servismain.css
@@ -15,7 +15,7 @@
 }
 
 .xizmatlar-box-top div {
-    width: 150px;
+    width: 180px;
     height: 5px;
     background: #c4c4c4
 }
@@ -38,5 +38,22 @@
 @media only screen and (max-width: 500px) {
     .xizmatlar-box-top h4{
         font-size: 32px;
+        font-weight: 700;
+        margin-left: -20px;
+    }
+    .xizmatlar-box-top p{
+        font-size: 16px;
+        max-width: 324px;
+        margin-left: -20px;
+    }
+
+    .xizmatlar-box-top div{
+        margin-top: -20px;
+        margin-left: -20px;
+        margin-bottom: 10px;
+    }
+
+    .xizmatlar-box-top hr{
+        margin-left: -20px;
     }
 }
